@@ -72,6 +72,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0002062: Multiple security vunerbilities
 -bug#0002063: multiple value poller output incorrectly interpreted as hexadecimal value
 -bug#0002064: Removing '~' (tilde) by sanitize_uri() conflicts with Apache UserDir translation 
+-bug#0002071: MySQL table poller_item is dropped always when "Data Input Method" is changed or added.
 -bug#0002079: Using input field of a script in graph title doesn't work 
 -bug#0002080: Database password containing "@" does not connect
 -bug: Update host template cli script help shows incorrect options
